--- a/apps/frontend/.env.production
+++ b/apps/frontend/.env.production
@@ -1,2 +1,2 @@
-VITE_API_ENDPOINT=https://api.kontestis.ac
+VITE_API_ENDPOINT=https://api.parking.ac
 VITE_OAUTH_CLIENT_ID=953907026294-3ev1hl5pqitqkks4alkkqhs5616oidq7.apps.googleusercontent.com
