--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       - PORT=8080
       - DB_HOST=scylla
       - DB_PORT=9042
-      - DB_KEYSPACE=kontestis
+      - DB_KEYSPACE=parking
       - DB_DATACENTER=datacenter1
       - REDIS_URL=redis://redis:6379
       - INFLUXDB_URL=http://influxdb:8086
@@ -69,8 +69,8 @@ services:
       - DOCKER_INFLUXDB_INIT_MODE=setup
       - DOCKER_INFLUXDB_INIT_USERNAME=root
       - DOCKER_INFLUXDB_INIT_PASSWORD=root1234
-      - DOCKER_INFLUXDB_INIT_ORG=kontestis-org
-      - DOCKER_INFLUXDB_INIT_BUCKET=kontestis
+      - DOCKER_INFLUXDB_INIT_ORG=parking-org
+      - DOCKER_INFLUXDB_INIT_BUCKET=parking
       - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=devtoken
       - TZ=Europe/Zagreb
     ports:
