--- a/apps/frontend/.env.example
+++ b/apps/frontend/.env.example
@@ -1,2 +1,2 @@
-VITE_API_ENDPOINT=https://api.kontestis.ac
+VITE_API_ENDPOINT=https://api.parking.ac
 VITE_OAUTH_CLIENT_ID=numbers-wow.apps.googleusercontent.com
