--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@kontestis/frontend",
+    "name": "@parking/frontend",
     "version": "1.0.0",
     "private": true,
     "scripts": {
@@ -10,8 +10,8 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^2.9.11",
-        "@kontestis/models": "workspace:^1.0.0",
-        "@kontestis/utils": "workspace:^1.0.0",
+        "@parking/models": "workspace:^1.0.0",
+        "@parking/utils": "workspace:^1.0.0",
         "@react-oauth/google": "^0.7.0",
         "axios": "^1.2.6",
         "babel-plugin-macros": "^3.1.0",
