--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,12 +10,13 @@
         "typecheck": "tsc --noEmit"
     },
     "dependencies": {
+        "@azure/event-hubs": "^5.11.2",
         "@influxdata/influxdb-client": "^1.33.2",
         "@influxdata/influxdb-client-apis": "^1.33.2",
-        "@parking/models": "workspace:^1.0.0",
-        "@parking/utils": "workspace:^1.0.0",
         "@kubernetes/client-node": "^0.18.1",
         "@lvksh/logger": "^1.6.4",
+        "@parking/models": "workspace:^1.0.0",
+        "@parking/utils": "workspace:^1.0.0",
         "@sinclair/typebox": "^0.26.8",
         "apidoc": "^0.53.1",
         "axios": "^1.2.6",
@@ -33,12 +34,14 @@
         "redis": "^4.6.4",
         "remeda": "^1.6.0",
         "scyllo": "^1.8.0",
+        "socket.io": "^4.7.2",
         "sunflake": "^0.6.0",
         "superjson": "^1.12.2",
         "systeminformation": "^5.17.12",
         "ts-node": "^10.9.1"
     },
     "devDependencies": {
+        "@swc/core": "^1.3.46",
         "@types/apidoc": "^0.50.0",
         "@types/bcrypt": "^5.0.0",
         "@types/cors": "^2.8.13",
@@ -46,8 +49,7 @@
         "@types/express-serve-static-core": "^4.17.30",
         "@types/jsonwebtoken": "^8.5.9",
         "@types/node": "^18.15.11",
-        "@swc/core": "^1.3.46",
-        "typescript": "^4.9.4",
-        "nodemon": "^2.0.22"
+        "nodemon": "^2.0.22",
+        "typescript": "^4.9.4"
     }
 }
