--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,6 +15,7 @@
         "@parking/utils": "workspace:^1.0.0",
         "@react-google-maps/api": "^2.19.2",
         "@react-oauth/google": "^0.7.0",
+        "@types/google.maps": "^3.54.6",
         "axios": "^1.2.6",
         "babel-plugin-macros": "^3.1.0",
         "babel-plugin-styled-components": "^2.1.1",
